# timeout_decorator

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-jupyter.txt  setup.cfg  setup.py
.github/workflows/: code_style.yml  performance_evaluation.yml  release.yml  test.yml  test_pull_request.yml  unit_tests.yml
notebooks/: overhead.ipynb
src/timeout-function-decorator/: __init__.py  timeout_decorator.py
src/timeout_decorator/: timeout_decorator.py
src/timeout_function_decorator/: __init__.py  timeout_decorator.py
tests/: test_cases_async.py  test_cases_sync.py  test_import.py
