[metadata]
name = timeout-function-decorator
version = 0.0.1
author = MatteoH2O1999
author_email = dellacqua.matteo99@gmail.com
description = Placeholder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatteoH2O1999/timeout_decorator
project_urls =
    Bug Tracker = https://github.com/MatteoH2O1999/timeout_decorator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src